--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k" crossorigin="anonymous"></script>
     <!-- ************ FONTSTYLE ****************** -->
     <link href="https://fonts.googleapis.com/css?family=Charmonman|Cookie|Combo|Astloch|Sacramento|Satisfy|Ubuntu+Condensed" rel="stylesheet">
-
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@300&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -42,11 +43,7 @@
     <div data-spy="scroll" data-target="#navbar" data-offset="0">
         <div class="card text-black" id="welcome">
             <img src="1.jpeg" class="d-block w-100 card-image " alt="solo-timeline-image">
-            <div class="card-img-overlay">
-                <!-- <h5 class="card-title" style="color: #BD081C">Hello all...</h5> -->
-                <!-- <p class="card-text" style="color: #38A1F3; background-color: #231F20">It's me your Sandeep, I'm getting married with love of my life and this is my wedding invitation to you and your family</p> -->
-                <img src="2.jpeg" class="overlay-img">
-            </div>
+
         </div>
 
         <div class="mbl-resp-view">
@@ -54,7 +51,7 @@
             <div class="col-lg-8 col-md-6 col-sm-12 col-xs-12 car-div-col-4">
                 <h2 class="car-h2">I, Sandeep, invite you to...</h2>
                 <p class="car-p">the most auspicious moment of my life</p>
-                <p class="car-p">as I wed the <span class="love">love</span> of my life</p>
+                <p class="car-p">as <span style="font-family:Cookie">I</span> wed the <span class="love">love</span> of my life</p>
                 <p class="car-p-style-1">Ravali</p>
 
             </div>
@@ -76,7 +73,7 @@
             </div>
             <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 venue-col">
                 <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d15227.129468148532!2d78.5699243!3d17.4222289!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xf41d4b2924ba4a16!2sSri%20Bommak%20Balaiah%20Function%20Hall!5e0!3m2!1sen!2sin!4v1607918832088!5m2!1sen!2sin"
-                    width="600" height="400" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+                    width="100%" height="400" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
             </div>
         </div>
 
@@ -97,7 +94,7 @@
         </div>
         <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 venue-col">
             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d801.1118248313159!2d79.56936702326654!3d17.23086956038437!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3a34c55d67f55509%3A0xe081fb4cdf9a6477!2syerkaram!5e0!3m2!1sen!2sin!4v1607918986982!5m2!1sen!2sin"
-                width="600" height="400" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+                width="100%" height="400" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
         </div>
     </div>
 
