--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             </ul>
         </nav>
         <h5 class="card-title" style="color: #BD081C">Hello all...</h5>
-        <p class="card-text" style="color: #38A1F3; background-color: #231F20">It's me your Sandeep,
+       <p class="card-text" style="color: #F7F9F9; background-color: #358597">It's me your Sandeep,
             <br> I'm getting married with love of my life and this is my wedding invitation to you and your family</p>
     </div>
     <div data-spy="scroll" data-target="#navbar" data-offset="0">
@@ -85,7 +85,7 @@
             <hr class="horizontal-rule">
             <p class="date-p">Monday</p>
             <p class="date-p">21st of Dec 2020</p>
-            <h2 class="date-h2">Timing:</h2>
+            <h2 class="date-h2">Time:</h2>
             <hr class="horizontal-rule">
             <p class="date-p">@ 11.30 a.m. onwards</p>
             <h2 class="venue-h2">Venue:</h2>
